<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Subm 1 Movie Catalogue</string>
    <string name="movie_poster" translatable="false">movie\'s poster</string>
    <string name="title_activity_main_home" translatable="false">MainHomeActivity</string>

    <string name="title_movie">movie</string>
    <string name="title_series">series</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="desc_poster_detail" translatable="false">image poster</string>
    <string name="title" translatable="false">DC Aquaman</string>
    <string name="date" translatable="false">2 September 2018</string>
    <string name="description">Description</string>
    <string name="title2" translatable="false">title</string>

    <string name="change_language_settings">Change Language Settings</string>

    <!--API Key (v3 auth)-->

    <!--API Read Access Token (v4 auth)-->
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="rating_num" translatable="false">6.3</string>
    <string name="popularity">Popularity</string>


    <string name="favorites">Favorites</string>

    <string name="text_delete_fav"> deleted from the Favorites list</string>
    <string name="text_add_fav"> added to the Favorites list</string>
    <string name="votes"> votes</string>
    <string name="search">search</string>
    <string name="search_hint" translatable="false">Ex : spiderman</string>
    <string name="appwidget_text">Favorite Movie</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_text">empty</string>

    <!--Fire base messaging-->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="subscribe_to_news">Subscribe to news</string>
    <string name="log_token">Log token</string>
    <string name="default_notification_channel_name">News</string>
    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
</resources>
