<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_baseline_search_white_24px"
            android:title="@string/search"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="collapseActionView|ifRoom" />
        <item
            android:id="@+id/action_change_settings"
            android:title="@string/change_language_settings"
            app:showAsAction="never"/>

        <item
            android:id="@+id/navigation_favorites"
            android:icon = "@drawable/ic_fav_list"
            android:title="@string/favorites"
            app:showAsAction="ifRoom"/>
    </group>

</menu>